# uartframeparser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  buffer.c  config_parse.c  example1.json  expression.c  frame.json  frame_decode.c  frame_parse.c  frame_read.c  generate_tarball.cmake  logtextedit.h  lua_env.c  main.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  test.cpp  uartframeparser.code-workspace  uartframeparser.h  uartframeparser.pptx  uartframeparser_zh_CN.ts  vanward.json  vcpkg.json
etc/: example1.json  frame.json  vanward.json
include/: uartframeparser.h
lib/: buffer.c  config_parse.c  frame_decode.c  frame_parse.c
lua/: CMakeLists.txt
src/: aboutdialog.cpp  aboutdialog.ui  bitfielddefinitiondialog.cpp  bitfielddefinitiondialog.h  bitfielddefinitiondialog.ui  config_parse.c  fielddefinitiondialog.cpp  fielddefinitiondialog.h  fielddefinitiondialog.ui  frame_decode.c  frame_parse.c  framedefinitiondialog.cpp  framedefinitiondialog.h  framedefinitiondialog.ui  logtextedit.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savechangesdialog.cpp  savechangesdialog.h  savechangesdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  subframedialog.cpp  subframedialog.h  subframedialog.ui  uartframeparser_zh_CN (2).ts  uartframeparser_zh_CN.ts  uartframeparserwrapper.cpp  uartframeparserwrapper.h
test/: main.c  test.cpp
